<resources>
    <string name="app_name">FoodHub</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="popular_meals">Popüler Yemekler</string>
    <string name="over_popular_items">Popüler Yemekler</string>
    <string name="all_recipes">FOODHUB</string>
    <string name="tablayout">TabLayout</string>
    <string name="categories">Kategoriler</string>
    <string name="category">KATEGORİ</string>
    <string name="meal_image">meal_image</string>
    <string name="youtube">YOUTUBE</string>
    <string name="payla">Paylaş</string>
    <string name="tarif">Tarif:</string>
    <string name="kaydet">Kaydet</string>
    <string name="menu">MENU</string>
    <string name="k">Çıkış</string>
    <string name="favoriler">Favoriler</string>
    <string name="cikis">Çıkış</string>
    <string name="k_yapmak_stedi_inize_emin_misiniz">Çıkış Yapmak İstediğinize Emin misiniz?</string>
    <string name="evet">Evet</string>
    <string name="hay_r">Hayır</string>
</resources>