<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.HomeFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:padding="12dp"
        android:textColor="@color/black"
        android:text="@string/all_recipes"
        android:textSize="30sp"
        android:textStyle="bold" />

    <SearchView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/searchbar" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/over_popular_items"
        android:textSize="24sp"
        android:textColor="@color/seed"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        android:layout_marginStart="12dp"/>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="2dp"
        android:contentDescription="@string/popular_meals"
        android:layout_marginHorizontal="12dp" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        tools:ignore="MissingConstraints"
        app:tabBackground="@drawable/indicator"
        app:tabGravity="center"
        app:tabIndicator="@null"
        android:contentDescription="@string/tablayout"
        app:tabIndicatorGravity="center"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categories"
        android:textSize="24sp"
        android:layout_marginTop="15dp"
        android:textColor="@color/seed"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        android:layout_marginStart="12dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="12dp"
        app:cardCornerRadius="10dp"
        app:cardUseCompatPadding="true">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_categories"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.cardview.widget.CardView>


</LinearLayout>