<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="detailMeal"
            type="com.decode.foodhub.models.MealX" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.DetailMealFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="230dp">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:collapsedTitleTextColor="@color/white"
                app:expandedTitleTextColor="@color/white"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
                app:title="@{detailMeal.strMeal}">

                <ImageView
                    android:id="@+id/detail_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"
                    android:contentDescription="@string/meal_image"
                    app:load="@{detailMeal.strMealThumb}"/>

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:src="@drawable/baseline_videocam_24"
            android:backgroundTint="?attr/colorPrimary"
            app:tint="#EF4141"
            app:layout_anchor="@id/app_bar"
            app:layout_anchorGravity="bottom|end"
            android:contentDescription="@string/youtube" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/linear_lyt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:gravity="center"
                    android:padding="3dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/text_like"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed"
                        android:text="12"
                        android:layout_marginEnd="10dp"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:drawableStartCompat="@drawable/ic_favorites" />

                    <TextView
                        android:id="@+id/text_save"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/kaydet"
                        android:layout_marginEnd="10dp"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:drawableStartCompat="@drawable/baseline_bookmark_border_24" />

                    <TextView
                        android:id="@+id/text_share"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/payla"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:drawableStartCompat="@drawable/ic_share" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_instructions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/tarif"
                    android:textStyle="bold"
                    android:textColor="@color/seed"
                    android:textSize="22sp"
                    android:fontFamily="sans-serif-condensed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/linear_lyt" />

                <TextView
                    android:id="@+id/tv_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:textSize="20sp"
                    android:textColor="@color/seed"
                    android:text="@{detailMeal.strInstructions}"
                    android:fontFamily="sans-serif-condensed"
                    app:layout_constraintTop_toBottomOf="@+id/tv_instructions"
                    app:layout_constraintStart_toStartOf="@id/tv_instructions" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>